2002-04-10  John Harper  <jsh@unfactored.org>

	Fixed #70071:

	* sawfish/wm/windows.jl (mark-window-as-dock, dock-window-p):
	new functions
	* sawfish/wm/state/gnome.jl (gnome-window-class-hacks): call
	mark-window-as-dock
	* sawfish/wm/state/wm-spec.jl (wm-class-hacks, DOCK type): call
	mark-window-as-dock
	* sawfish/wm/commands/x-cycle.jl (cycle-dock,
	cycle-dock-backwards): new commands. Also made it so that the
	selection functions have to call window-in-cycle-p themselves
	* sawfish/wm/windows.jl (window-in-cycle-p): new keyword arg
	IGNORE-CYCLE-skip

2002-04-02  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl (client-message-handler): before
	doing move-resize requests, fetch and save a timestamp so that
	grabs don't fail. Fixes #77041

2002-03-24  John Harper  <jsh@unfactored.org>

	* sawfish/wm/animation/outline.jl: add error handling around
	calls to the window-outline drawing code. Ungrab the server on
	an error. Band-aid for #75984

2002-03-09  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/state/wm-spec.jl (supported-atoms): updated to
	include all atoms we recognize, not just top-level things

	* sawfish/wm/state/maximize.jl (window-maximized-fullscreen-p,
	maximize-window-fullscreen, maximize-window-fullscreen-toggle):
	support a new type of maximization, called `fullscreen'. In
	this mode the window's borders are removed and it fills the
	entire area of the head (even if it's size hints would dictate
	otherwise)

	* sawfish/wm/state/wm-spec.jl: support _NET_WM_STATE_FULLSCREEN

	(the above two changes fix #73970)

	* sawfish/wm/util/ping.jl: actually tested this code (Gtk+ 2
	supports the protocol). Fixed some bugs. Don't use X server
	timestamps as the unique id anymore (since they may not be
	unique), use a unique sequence number instead

	(ping-window): TIMEOUT-MSECS is now optional and defaults to
	one second

2002-03-03  John Harper  <jsh@pixelslut.com>

	* sawfish/wm/placement/off-center.jl (workarea-for): replaced