@@ -1,3 +1,11 @@
+2002-04-18  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/ext/edge-flip.jl (edge-flip-warp-pointer): made
+	the description a bit clearer (hopefully). #77668
+
+	* sawfish/wm/windows.jl (mark-window-as-dock): set
+	fixed-position property. Should fix #78582
+
 2002-04-10  John Harper  <jsh@unfactored.org>
 
 	Fixed #70071:
